K1J-1525: Migrate jaxrs to spring mvc for rest apis - Step 8.8 (Removed legacy controller as it is not used anymore)